--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,11 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+
+        // If you're using a version of Gradle lower than 4.1, you must instead use:
+        // maven {
+        //     url 'https://maven.google.com'
+        // }
     }
 }
 
