--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.project.game">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,16 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GameProject">
-        <activity android:name=".Activity5">
-
-        </activity>
+        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".Activity5"></activity>
         <activity android:name=".Activity4" />
         <activity android:name=".Activity3" />
         <activity android:name=".Activity2" />
-        <activity android:name=".MainActivity"
-            android:noHistory = "true">
+        <activity
+            android:name=".MainActivity"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
