Changes By Nabeel

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.project.game">
-    <uses-permission-sdk-23 android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission-sdk-23 android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,8 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GameProject">
-        <activity android:name=".ProfileActivity"></activity>
-        <activity android:name=".Activity5"></activity>
+        <activity android:name=".PopUpActivity"></activity>
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".Activity5" />
         <activity android:name=".Activity4" />
         <activity android:name=".Activity3" />
         <activity android:name=".Activity2" />
